--- a/Biodiversity-2.html
+++ b/Biodiversity-2.html
@@ -518,16 +518,15 @@ var title = document.getElementById('title-picture')
   <script>
     window.free_vp = 1;
   </script>
- 
-
-	
+ 	
 </div>
-    <script type="text/javascript" src="./files/main.js"></script>
+
 	<script type="text/javascript" src="./files/script.js"></script>      
 	<script type="text/javascript" src="./files/redesign-header.js"></script>
-	<script type="text/javascript" src="./files/runtime.js"></script>
-	<script type="text/javascript" src="./files/license.js"></script>	
-	<script src="./files/helpers.js"></script> 
+	<script type="text/javascript" src="./files/runtime.js" defer=""></script>
+	<script type="text/javascript" src="./files/license.js" defer=""></script>
+	<script type="text/javascript" src="./files/main.js" defer=""></script>
+	<script type="text/javascript" src="./files/helpers.js"></script> 
 	
 	<script>
         var playing = 0;
