--- a/Biodiversity-3.html
+++ b/Biodiversity-3.html
@@ -11,8 +11,8 @@
 	<meta property="og:type" content="website" />
     <link rel="icon" href="./media/favicon.png" type="image/png">
                    
-     <title>Biodiversity</title>
-
+    <title>Biodiversity</title>
+	 
 	<link rel="stylesheet" type="text/css" href="./files/style.css">
 	<link rel="stylesheet" type="text/css" href="./files/style(1).css">
 	<link rel="stylesheet" type="text/css" href="./files/style(2).css">
@@ -450,12 +450,12 @@ var title = document.getElementById('title-picture')
 	
 </div>
 
-    <script type="text/javascript" src="./files/main.js"></script>
 	<script type="text/javascript" src="./files/script.js"></script>      
 	<script type="text/javascript" src="./files/redesign-header.js"></script>
-	<script type="text/javascript" src="./files/runtime.js"></script>
-	<script type="text/javascript" src="./files/license.js"></script>
-	<script src="./files/helpers.js"></script> 
+	<script type="text/javascript" src="./files/runtime.js" defer=""></script>
+	<script type="text/javascript" src="./files/license.js" defer=""></script>
+	<script type="text/javascript" src="./files/main.js" defer=""></script>
+	<script type="text/javascript" src="./files/helpers.js"></script> 
 
 	<script>
         var playing = 0;
