--- a/index.html
+++ b/index.html
@@ -17,14 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="./files/style(1).css">
 	<link rel="stylesheet" type="text/css" href="./files/style(2).css">
 	<link rel="stylesheet" type="text/css" href="./files/style(3).css">
-	
-	<script type="text/javascript" src="./files/video-main.js" defer=""></script>
- 	<script type="text/javascript" src="./files/script.js"></script>      
-	<script type="text/javascript" src="./files/redesign-header.js"></script>
-	<script type="text/javascript" src="./files/runtime.js" defer=""></script>
-	<script type="text/javascript" src="./files/license.js" defer=""></script>
-	
-	
+ 
     <script>
       window.App = {
         app: { },  
@@ -43,9 +36,8 @@
       };
     </script>
 
-<script type="text/javascript" src="./files/helpers.js"></script>
-
 	<style>
+	.playing2 .pe_slow-ratio__button{visibility:hidden!important;}
 	
 	.btn{align-items:center;display:absolute;text-decoration-line:none}.btn:hover{--tw-text-opacity:1;color:rgb(255 255 255/var(--tw-text-opacity))}
 	.btn-lg{color:#fff;font-size:1.125rem;height:4rem;min-height:4rem;padding-left:1.5rem;padding-right:1.5rem}
@@ -471,10 +463,15 @@ var title = document.getElementById('title-picture')
  
 </div>
     
- 
+	<script type="text/javascript" src="./files/script.js"></script>      
+	<script type="text/javascript" src="./files/redesign-header.js"></script>
+	<script type="text/javascript" src="./files/runtime.js" defer=""></script>
+	<script type="text/javascript" src="./files/license.js" defer=""></script>
+	<script type="text/javascript" src="./files/video-main.js" defer=""></script>
+	<script type="text/javascript" src="./files/helpers.js"></script> 
 	
 
-	
+
 	<script>
         var playing = 0;
         $('.show_video_js').on('click', function openVideo(event) {
