--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
     </script>
 
 	<style>
+	@media (max-width: 1200px) {
+	.pe_slow-ratio__button{visibility:hidden!important;
+	}
+	@media (min-width: 1201px) {
 	.playing2 .pe_slow-ratio__button{visibility:hidden!important;}
-	
+	}
 	.btn{align-items:center;display:absolute;text-decoration-line:none}.btn:hover{--tw-text-opacity:1;color:rgb(255 255 255/var(--tw-text-opacity))}
 	.btn-lg{color:#fff;font-size:1.125rem;height:4rem;min-height:4rem;padding-left:1.5rem;padding-right:1.5rem}
 	.button-primary{--tw-border-opacity:1;--tw-bg-opacity:1;background-color:rgb(20 163 181/var(--tw-bg-opacity));border-color:rgb(19 124 138/var(--tw-border-opacity));border-width:1px;font-weight:600;text-transform:uppercase}
