--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
 	<style>
 	@media (max-width: 1200px) {
-	.pe_slow-ratio__button{visibility:hidden!important;
+	.pe_slow-ratio__button{opacity:0!important;}
 	}
 	@media (min-width: 1201px) {
-	.playing2 .pe_slow-ratio__button{visibility:hidden!important;}
+	.playing2 .b-popup_slow-btn__wrapper{visibility:hidden!important;}
 	}
 	.btn{align-items:center;display:absolute;text-decoration-line:none}.btn:hover{--tw-text-opacity:1;color:rgb(255 255 255/var(--tw-text-opacity))}
 	.btn-lg{color:#fff;font-size:1.125rem;height:4rem;min-height:4rem;padding-left:1.5rem;padding-right:1.5rem}
