--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 			        </div>
   
  
-<div class="page-wrapper" style="min-height: 89px;" >oncontextmenu="return false;"
+<div class="page-wrapper" style="min-height: 89px;" oncontextmenu="return false;">
 
 	<div class="undercap undercap_bg-color_blue" style="">
 		<div class="l-wrapper clearfix m-header-top b-header_content__container">
@@ -468,7 +468,6 @@ var title = document.getElementById('title-picture')
 	<script type="text/javascript" src="./files/video-main.js" defer=""></script>
 	<script type="text/javascript" src="./files/helpers.js"></script> 
 	
-
 	<script>
         var playing = 0;
         $('.show_video_js').on('click', function openVideo(event) {
