--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 			        </div>
   
  
-<div class="page-wrapper" style="min-height: 89px;" oncontextmenu="return false;">
+<div class="page-wrapper" style="min-height: 89px;" >oncontextmenu="return false;"
 
 	<div class="undercap undercap_bg-color_blue" style="">
 		<div class="l-wrapper clearfix m-header-top b-header_content__container">
